--- a/customers/templates/customers/account_status.html
+++ b/customers/templates/customers/account_status.html
@@ -323,9 +323,9 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Account Number</div>
-                      
+                     
                       <div class="h5 mb-0 font-weight-bold text-gray-800">{{ account.account_number }}</div>
-                      
+                    
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -378,6 +378,7 @@
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Currency</div>
                       <div class="h5 mb-0 font-weight-bold text-gray-800"> {{ account.currency }}</div>
+                      
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -389,8 +390,8 @@
       </div>
 
         <!-- DataTales Example -->
-          <div class="card shadow mb-4">
-            <div class="card-header py-3">
+        <div class="card shadow mb-4">
+          <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">Transaction History</h6>
             </div>
             <h4> Deposits</h4>
@@ -400,7 +401,7 @@
                   <thead>
                     <tr>
                       <th>Amount</th>
-                      <th>Date of Transaction</th>
+                      <th>Timestamp</th>
                       
                     </tr>
                   </thead>
@@ -408,7 +409,52 @@
                   {% for deposit in deposits %}
                     <tr>
                       <td>{{ deposit.amount }}</td>
-                      <td>{{ deposit.date_of_transaction }} </td>
+                      <td>{{ deposit.timestamp }} </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+
+            <h4> Withdrawals</h4>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th>Amount</th>
+                      <th>Timestamp</th>
+                      
+                    </tr>
+                  </thead>
+                  <tbody>
+                  {% for withdrawal in withdrawals %}
+                    <tr>
+                      <td>{{ withdrawal.amount }}</td>
+                      <td>{{ withdrawal.timestamp }} </td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+            <h4> Money Transfers</h4>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th>Amount</th>
+                      <th>Timestamp</th>
+                      
+                    </tr>
+                  </thead>
+                  <tbody>
+                  {% for money_transfer in money_transfers %}
+                    <tr>
+                      <td>{{ money_transfer.amount }}</td>
+                      <td>{{ money_transfer.timestamp }} </td>
                     </tr>
                     {% endfor %}
                   </tbody>
